--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#135bec" />
     <meta name="description" content="Sistema de Gestión de Parque Vehicular - DIF Municipal La Paz" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <title>Gestión de Parque Vehicular - DIF La Paz</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
